Fixing spacing

--- a/html/css/style.css
+++ b/html/css/style.css
@@ -2,6 +2,8 @@ html{
     background-color: #ced6e0;
 }
 
+body { padding-top: 50px; }
+
 .center{
     text-align: center !important;
     display: block;
